project(sample)

add_subdirectory(tutorial1)
add_subdirectory(tutorial1.1)
add_subdirectory(tutorial2)
add_subdirectory(tutorial3)
add_subdirectory(tutorial4)
add_subdirectory(tutorial5)
add_subdirectory(tutorial6)
add_subdirectory(tutorial6.1)
add_subdirectory(tutorial7)
add_subdirectory(tutorial8)
add_subdirectory(tutorial9)
add_subdirectory(tutorial10)
add_subdirectory(tutorial11)
add_subdirectory(tutorial12)
add_subdirectory(tutorial14)
add_subdirectory(tutorial15)
add_subdirectory(tutorial16)
add_subdirectory(tutorial17)
add_subdirectory(tutorial18)
add_subdirectory(tutorial19)
add_subdirectory(tutorial19.1)
